src/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <label>Subject Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_Name__c</fullName>
        <label>Teacher Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>